# deskled

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  armv6-unknown-linux-gnueabihf.json
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
deskled/: Cargo.toml
deskled/src/: config.rs  main.rs
driver/: Cargo.toml
driver/src/: error.rs  lib.rs  spidev.rs
ghome/: Cargo.toml  build.rs
ghome/migrations/: V1__initial.sql  V2__device_color.sql  V3__device_state.sql
ghome/src/: authorization.rs  data.rs  error.rs  lib.rs
ghome/src/dal/: device.rs  mod.rs  oauth2.rs
ghome/src/routes/: fulfillment.rs  mod.rs
ghome/src/routes/oauth2/: exchange.rs  login_api.rs  login_static.html  login_static.rs  mod.rs
