[package]
name = "deskled"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.5"

[dependencies.tokio]
version = "1.19"
default-features = false
features = ["rt", "fs", "macros"]

[dependencies.driver]
path = "../driver"

[dependencies.ghome]
path = "../ghome"

[dependencies.serde]
version = "1"
features = ["derive"]